# nhp-dwiproc

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  other.yaml  support_request.yaml
.github/workflows/: docs.yaml  test.yaml
docs/: book.toml  custom.css  langtabs.js
docs/src/: SUMMARY.md
docs/src/contributing/: README.md  main.md
docs/src/installation/: README.md
docs/src/runners/: README.md  main.md  styxdocker.md  styxlocal.md  styxsingularity.md
docs/src/usage/: README.md  cli.md
docs/src/usage/advanced/: README.md  act.md  tract.md
docs/src/usage/advanced/pysrc/: act.py
docs/src/usage/analysis_levels/: README.md  connectivity.md  index.md  index_level.md  main.md  preprocess.md  reconstruction.md  tractography.md
docs/src/usage/configuration/: README.md  template.md
docs/src/version/: README.md  version.md
example/: config_default.yaml  containers.yaml
src/nhp_dwiproc/: __init__.py  run.py
src/nhp_dwiproc/app/: __init__.py  analysis_level.py  app.py  cli.py  descriptor.py  io.py  type.py  utils.py
src/nhp_dwiproc/app/analysis_levels/: __init__.py  connectivity.py  index.py  participant.py  preprocess.py  reconstruction.py
src/nhp_dwiproc/app/analysis_levels/participant/: connectivity.py  preprocess.py  tractography.py
src/nhp_dwiproc/app/cli/: parser.py
src/nhp_dwiproc/app/cli/args/: __init__.py  connectivity.py  index.py  optional.py  preprocess.py  tractography.py
src/nhp_dwiproc/app/lib/: __init__.py  anat.py  dwi.py  metadata.py
src/nhp_dwiproc/app/resources/: __init__.py  config.yaml  containers.yaml
src/nhp_dwiproc/app/resources/topup/: __init__.py  b02b0.cnf  b02b0_macaque.cnf  b02b0_marmoset.cnf
src/nhp_dwiproc/app/utils/: __init__.py  app.py  io.py
src/nhp_dwiproc/app/workflow/: __init__.py  connectivity.py
src/nhp_dwiproc/app/workflow/preprocess/: __init__.py  biascorrect.py  denoise.py  dwi.py  eddy.py  eddymotion.py  fugue.py  registration.py  topup.py  unring.py
src/nhp_dwiproc/app/workflow/reconstruction/: __init__.py  reconst.py  tractography.py
src/nhp_dwiproc/cli/: __init__.py  main.py  utils.py
src/nhp_dwiproc/cli/commands/: connectivity.py  index.py  preprocess.py  reconstruction.py
src/nhp_dwiproc/cli/config/: connectivity.py  preprocess.py  reconstruction.py  shared.py
src/nhp_dwiproc/config/: __init__.py  connectivity.py  preprocess.py  reconstruction.py  shared.py  utils.py
src/nhp_dwiproc/lib/: anat.py  dwi.py  metadata.py  utils.py
src/nhp_dwiproc/utils/: __init__.py  app.py  assets.py  io.py
src/nhp_dwiproc/workflow/: connectivity.py
src/nhp_dwiproc/workflow/diffusion/: connectivity.py  reconst.py  tractography.py
src/nhp_dwiproc/workflow/diffusion/preprocess/: __init__.py  biascorrect.py  denoise.py  dwi.py  eddy.py  eddymotion.py  fugue.py  registration.py  topup.py  unring.py
tests/: test_app_utils.py  test_cli.py  test_config.py
tests/test_app/: conftest.py  test_io.py  test_lib.py  test_utils.py
