[project]
name = "nhp-dwiproc"
description = "BIDS app for performing diffusion processing of NHP dataset(s)"
authors = [{name = "Jason Kai", email = "jason.kai@childmind.org"}]
license = "MIT"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "attrs>=25.3.0",
  "bidsapp-helper>=0.1.0",
  "bids2table==2.1.0",
  # for bids2table=0.1.0
  "pyarrow<21.0",
  "niwrap>=0.6.1",
  "pyyaml>=6.0.2",
  "eddymotion>=0.1.15",
  "nifti",
  # (Temporary) pinned versions of packages to fix errors
  "nitransforms==24.0.1"
]
keywords = ["nhp", "diffusion mri", "processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/HumanBrainED/nhp-dwiproc"

[project.scripts]
nhp_dwiproc = "nhp_dwiproc.run:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.5",
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.11",
  "types-pyyaml>=6.0.12.20250516"
]

[tool.uv.sources]
nifti = {git = "https://github.com/childmindresearch/nifti", rev = "65ca06b"}

[tool.hatch.build]
source = ["src/"]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN003",  # **kwargs should not be annotated.
  "ANN401"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
