[project]
dependencies = [
  "bids2table[s3]>=2.1.2",
  "niwrap==0.8.0",
  "niwrap-helper>=0.7.0",
  "polars>=1.35.2",
  "typer>=0.20.0",
  "eddymotion>=0.1.15",
  # (Temporary) pinned versions of packages to fix errors
  "attrs==25.4.0",
  "nitransforms==24.0.1"
]
name = "nhp-dwiproc"
description = "BIDS app for performing diffusion processing of NHP dataset(s)"
authors = [{name = "Jason Kai", email = "jason.kai@childmind.org"}]
license = "MIT"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11, <3.13"
keywords = ["nhp", "diffusion mri", "processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/HumanBrainED/nhp-dwiproc"

[project.scripts]
nhp_dwiproc = "nhp_dwiproc.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pre-commit>=4.5.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.9",
  "ty>=0.0.2"
]

[tool.hatch.build]
source = ["src/"]

[tool.hatch.build.hooks.vcs]
version-file = "src/nhp_dwiproc/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
omit = [
  # Ignore testing requiring imaging data
  "src/nhp_dwiproc/cli/main.py",
  "src/nhp_dwiproc/cli/commands/*.py",
  "src/nhp_dwiproc/app/analysis_levels/**",
  "src/nhp_dwiproc/app/lib/anat.py",
  "src/nhp_dwiproc/app/lib/dwi.py",
  "src/nhp_dwiproc/app/workflow/**"
]
exclude_also = [
  "@overload",
  "def _.*\\("  # Ignore private methods
]

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN002",  # Missing *args annotation
  "ANN003",  # Missing **kwargs annotated.
  "ANN401"  # 'Any' typehint
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN201",  # Missing return type
  "D100",  # Missing module docstring
  "D102"  # Missing method docstring
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
